<resources>
    <string name="app_name">ModdedPE Pro</string>
    <string name="title_activity_start_menu">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_title">ModdedPE Pro</string>
    <string name="app_summary">A professional NMod launcher for Minecraft.</string>
    <string name="app_version_name">1.0-[1.16.0]</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="app_start_game">Start Game</string>
    <string name="app_settings">Settings</string>
    <string name="app_manage_nmods">Manage NMods</string>
    <string name="app_permission_denied">Permission Denied</string>
    <string name="app_message_permission_denied">OOps!ModdedPE couldn\'t gain the permission to read your storage.This is vital for launching app.Please go to the Settings to make sure that the permisssion isn\'t denied.</string>
    <string name="app_info">Info</string>
    <string name="app_loading">Loading</string>
    <string name="app_loading_summary">Loading game,please wait.</string>
</resources>